[tool.poetry]
name = "repl_python3_Grinder"
version = "0.1.0"
description = ""
authors = ["Gamecooler19 <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
colorama = "^0.4.4"
discord = "^1.7.3"
Flask = "^2.1.2"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
